--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ficha-criminal-simples",
+  "name": "calcpenal",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "express": "^4.18.2",
     "form-data": "^4.0.5",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.0",
-    "node-fetch": "^2.7.0"
+    "mysql2": "^3.6.5",
+    "node-fetch": "^2.7.0",
+    "busboy": "^1.6.0"
   }
 }
