--- a/package.json
+++ b/package.json
@@ -6,13 +6,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "form-data": "^4.0.5",
-    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
-    "node-fetch": "^2.7.0",
-    "busboy": "^1.6.0"
+    "busboy": "^1.6.0",
+    "form-data": "^4.0.0"
   }
 }
